src/objects/Utility_Territory_Rate_Codes__c.object
<CustomObject>
    <fields>
        <fullName>CPF_Rate_Code_Id__c</fullName>
        <label>CPF Rate Code Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <label>Utility Company</label>
        <referenceTo>Utility_Company__c</referenceTo>
        <relationshipLabel>Utility Territory Rate Codes</relationshipLabel>
        <relationshipName>Utility_Territory_Rate_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Utility Territory Rate Codes</label>
    <nameField>
        <displayFormat>UT-{0000}</displayFormat>
        <label>Utility Territory Rate Codes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utility Territory Rate Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>